ProyectoFinal/proyecto_finalParser.py
# Generated from ./proyecto_final.g4 by ANTLR 4.13.2
# encoding: utf-8
from antlr4 import *
from io import StringIO
import sys
if sys.version_info[1] > 5:
	from typing import TextIO
else:
	from typing.io import TextIO


class proyecto_finalParser ( Parser ):

    grammarFileName = "proyecto_final.g4"

    atn = ATNDeserializer().deserialize(serializedATN())

    decisionsToDFA = [ DFA(ds, i) for i, ds in enumerate(atn.decisionToState) ]

    sharedContextCache = PredictionContextCache()

    literalNames = [ "<INVALID>", "'('", "')'", "'{'", "'}'", "';'", "','", 
                     "'circulo'", "'cuadrado'", "'triangulo'", "'rectangulo'", 
                     "'pentagono'", "'hexagono'", "'heptagono'", "'+'", 
                     "'-'", "'*'", "'/'", "'raiz'", "'octagono'", "'nonagono'", 
                     "'decagono'", "'icosaedro'", "'dodecaedro'", "'tetradecagono'", 
                     "'cubo'", "'esfera'", "'cilindro'", "'cono'", "'trapecio'", 
                     "'rombo'", "'elipse'", "'paralelepipedo'" ]

    symbolicNames = [ "<INVALID>", "LPAREN", "RPAREN", "LBRACE", "RBRACE", 
                      "SEMI", "COMMA", "DEF_FUNC", "RETURN", "UNTIL", "RECTANGULO", 
                      "TRUE", "FALSE", "PRINT", "PLUS", "MINUS", "MUL", 
                      "DIV", "RAIZ", "EQUAL", "NO_EQUAL", "MAYOR", "MENOR", 
                      "MAYOR_EQUAL", "MENOR_EQUAL", "TEXT", "INTERGER", 
                      "DECIMAL", "BOOLEAN", "IF_STRUCTURE", "ELSE_STRUCTURE", 
                      "FOR_STRUCTURE", "WHILE_STRUCTURE", "STRING", "NUMBER", 
                      "ID", "WS", "COMMENT" ]

    RULE_programa = 0
    RULE_varDeclare = 1
    RULE_funcDeclare = 2
    RULE_structureControl = 3
    RULE_ciclo = 4
    RULE_imprimirStatement = 5
    RULE_returnStatement = 6
    RULE_expresionStatement = 7
    RULE_listaParam = 8
    RULE_expresion = 9
    RULE_funcionLlamada = 10
    RULE_listaArgument = 11
    RULE_sentenceDeclare = 12

    ruleNames =  [ "programa", "varDeclare", "funcDeclare", "structureControl", 
                   "ciclo", "imprimirStatement", "returnStatement", "expresionStatement", 
                   "listaParam", "expresion", "funcionLlamada", "listaArgument", 
                   "sentenceDeclare" ]

    EOF = Token.EOF
    LPAREN=1
    RPAREN=2
    LBRACE=3
    RBRACE=4
    SEMI=5
    COMMA=6
    DEF_FUNC=7
    RETURN=8
    UNTIL=9
    RECTANGULO=10
    TRUE=11
    FALSE=12
    PRINT=13
    PLUS=14
    MINUS=15
    MUL=16
    DIV=17
    RAIZ=18
    EQUAL=19
    NO_EQUAL=20
    MAYOR=21
    MENOR=22
    MAYOR_EQUAL=23
    MENOR_EQUAL=24
    TEXT=25
    INTERGER=26
    DECIMAL=27
    BOOLEAN=28
    IF_STRUCTURE=29
    ELSE_STRUCTURE=30
    FOR_STRUCTURE=31
    WHILE_STRUCTURE=32
    STRING=33
    NUMBER=34
    ID=35
    WS=36
    COMMENT=37

    def __init__(self, input:TokenStream, output:TextIO = sys.stdout):
        super().__init__(input, output)
        self.checkVersion("4.13.2")
        self._interp = ParserATNSimulator(self, self.atn, self.decisionsToDFA, self.sharedContextCache)
        self._predicates = None




    class ProgramaContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def sentenceDeclare(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(proyecto_finalParser.SentenceDeclareContext)
            else:
                return self.getTypedRuleContext(proyecto_finalParser.SentenceDeclareContext,i)


        def getRuleIndex(self):
            return proyecto_finalParser.RULE_programa

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterPrograma" ):
                listener.enterPrograma(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitPrograma" ):
                listener.exitPrograma(self)




    def programa(self):

        localctx = proyecto_finalParser.ProgramaContext(self, self._ctx, self.state)
        self.enterRule(localctx, 0, self.RULE_programa)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 27 
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while True:
                self.state = 26
                self.sentenceDeclare()
                self.state = 29 
                self._errHandler.sync(self)
                _la = self._input.LA(1)
                if not ((((_la) & ~0x3f) == 0 and ((1 << _la) & 67612451202) != 0)):
                    break

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class VarDeclareContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def ID(self):
            return self.getToken(proyecto_finalParser.ID, 0)

        def EQUAL(self):
            return self.getToken(proyecto_finalParser.EQUAL, 0)

        def expresion(self):
            return self.getTypedRuleContext(proyecto_finalParser.ExpresionContext,0)


        def SEMI(self):
            return self.getToken(proyecto_finalParser.SEMI, 0)

        def TEXT(self):
            return self.getToken(proyecto_finalParser.TEXT, 0)

        def INTERGER(self):
            return self.getToken(proyecto_finalParser.INTERGER, 0)

        def DECIMAL(self):
            return self.getToken(proyecto_finalParser.DECIMAL, 0)

        def BOOLEAN(self):
            return self.getToken(proyecto_finalParser.BOOLEAN, 0)

        def getRuleIndex(self):
            return proyecto_finalParser.RULE_varDeclare

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterVarDeclare" ):
                listener.enterVarDeclare(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitVarDeclare" ):
                listener.exitVarDeclare(self)




    def varDeclare(self):

        localctx = proyecto_finalParser.VarDeclareContext(self, self._ctx, self.state)
        self.enterRule(localctx, 2, self.RULE_varDeclare)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 31
            _la = self._input.LA(1)
            if not((((_la) & ~0x3f) == 0 and ((1 << _la) & 503316480) != 0)):
                self._errHandler.recoverInline(self)
            else:
                self._errHandler.reportMatch(self)
                self.consume()
            self.state = 32
            self.match(proyecto_finalParser.ID)
            self.state = 33
            self.match(proyecto_finalParser.EQUAL)
            self.state = 34
            self.expresion(0)
            self.state = 35
            self.match(proyecto_finalParser.SEMI)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class FuncDeclareContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def DEF_FUNC(self):
            return self.getToken(proyecto_finalParser.DEF_FUNC, 0)

        def ID(self):
            return self.getToken(proyecto_finalParser.ID, 0)

        def LPAREN(self):
            return self.getToken(proyecto_finalParser.LPAREN, 0)

        def RPAREN(self):
            return self.getToken(proyecto_finalParser.RPAREN, 0)

        def LBRACE(self):
            return self.getToken(proyecto_finalParser.LBRACE, 0)

        def RBRACE(self):
            return self.getToken(proyecto_finalParser.RBRACE, 0)

        def listaParam(self):
            return self.getTypedRuleContext(proyecto_finalParser.ListaParamContext,0)


        def sentenceDeclare(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(proyecto_finalParser.SentenceDeclareContext)
            else:
                return self.getTypedRuleContext(proyecto_finalParser.SentenceDeclareContext,i)


        def getRuleIndex(self):
            return proyecto_finalParser.RULE_funcDeclare

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterFuncDeclare" ):
                listener.enterFuncDeclare(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitFuncDeclare" ):
                listener.exitFuncDeclare(self)




    def funcDeclare(self):

        localctx = proyecto_finalParser.FuncDeclareContext(self, self._ctx, self.state)
        self.enterRule(localctx, 4, self.RULE_funcDeclare)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 37
            self.match(proyecto_finalParser.DEF_FUNC)
            self.state = 38
            self.match(proyecto_finalParser.ID)
            self.state = 39
            self.match(proyecto_finalParser.LPAREN)
            self.state = 41
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            if (((_la) & ~0x3f) == 0 and ((1 << _la) & 503316480) != 0):
                self.state = 40
                self.listaParam()


            self.state = 43
            self.match(proyecto_finalParser.RPAREN)
            self.state = 44
            self.match(proyecto_finalParser.LBRACE)
            self.state = 48
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while (((_la) & ~0x3f) == 0 and ((1 << _la) & 67612451202) != 0):
                self.state = 45
                self.sentenceDeclare()
                self.state = 50
                self._errHandler.sync(self)
                _la = self._input.LA(1)

            self.state = 51
            self.match(proyecto_finalParser.RBRACE)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class StructureControlContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def IF_STRUCTURE(self):
            return self.getToken(proyecto_finalParser.IF_STRUCTURE, 0)

        def LPAREN(self):
            return self.getToken(proyecto_finalParser.LPAREN, 0)

        def expresion(self):
            return self.getTypedRuleContext(proyecto_finalParser.ExpresionContext,0)


        def RPAREN(self):
            return self.getToken(proyecto_finalParser.RPAREN, 0)

        def LBRACE(self, i:int=None):
            if i is None:
                return self.getTokens(proyecto_finalParser.LBRACE)
            else:
                return self.getToken(proyecto_finalParser.LBRACE, i)

        def RBRACE(self, i:int=None):
            if i is None:
                return self.getTokens(proyecto_finalParser.RBRACE)
            else:
                return self.getToken(proyecto_finalParser.RBRACE, i)

        def sentenceDeclare(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(proyecto_finalParser.SentenceDeclareContext)
            else:
                return self.getTypedRuleContext(proyecto_finalParser.SentenceDeclareContext,i)


        def ELSE_STRUCTURE(self):
            return self.getToken(proyecto_finalParser.ELSE_STRUCTURE, 0)

        def getRuleIndex(self):
            return proyecto_finalParser.RULE_structureControl

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterStructureControl" ):
                listener.enterStructureControl(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitStructureControl" ):
                listener.exitStructureControl(self)




    def structureControl(self):

        localctx = proyecto_finalParser.StructureControlContext(self, self._ctx, self.state)
        self.enterRule(localctx, 6, self.RULE_structureControl)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 53
            self.match(proyecto_finalParser.IF_STRUCTURE)
            self.state = 54
            self.match(proyecto_finalParser.LPAREN)
            self.state = 55
            self.expresion(0)
            self.state = 56
            self.match(proyecto_finalParser.RPAREN)
            self.state = 57
            self.match(proyecto_finalParser.LBRACE)
            self.state = 61
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while (((_la) & ~0x3f) == 0 and ((1 << _la) & 67612451202) != 0):
                self.state = 58
                self.sentenceDeclare()
                self.state = 63
                self._errHandler.sync(self)
                _la = self._input.LA(1)

            self.state = 64
            self.match(proyecto_finalParser.RBRACE)
            self.state = 74
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            if _la==30:
                self.state = 65
                self.match(proyecto_finalParser.ELSE_STRUCTURE)
                self.state = 66
                self.match(proyecto_finalParser.LBRACE)
                self.state = 70
                self._errHandler.sync(self)
                _la = self._input.LA(1)
                while (((_la) & ~0x3f) == 0 and ((1 << _la) & 67612451202) != 0):
                    self.state = 67
                    self.sentenceDeclare()
                    self.state = 72
                    self._errHandler.sync(self)
                    _la = self._input.LA(1)

                self.state = 73
                self.match(proyecto_finalParser.RBRACE)


        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class CicloContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def FOR_STRUCTURE(self):
            return self.getToken(proyecto_finalParser.FOR_STRUCTURE, 0)

        def ID(self):
            return self.getToken(proyecto_finalParser.ID, 0)

        def RECTANGULO(self):
            return self.getToken(proyecto_finalParser.RECTANGULO, 0)

        def expresion(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(proyecto_finalParser.ExpresionContext)
            else:
                return self.getTypedRuleContext(proyecto_finalParser.ExpresionContext,i)


        def LBRACE(self):
            return self.getToken(proyecto_finalParser.LBRACE, 0)

        def RBRACE(self):
            return self.getToken(proyecto_finalParser.RBRACE, 0)

        def TEXT(self):
            return self.getToken(proyecto_finalParser.TEXT, 0)

        def INTERGER(self):
            return self.getToken(proyecto_finalParser.INTERGER, 0)

        def DECIMAL(self):
            return self.getToken(proyecto_finalParser.DECIMAL, 0)

        def BOOLEAN(self):
            return self.getToken(proyecto_finalParser.BOOLEAN, 0)

        def UNTIL(self):
            return self.getToken(proyecto_finalParser.UNTIL, 0)

        def sentenceDeclare(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(proyecto_finalParser.SentenceDeclareContext)
            else:
                return self.getTypedRuleContext(proyecto_finalParser.SentenceDeclareContext,i)


        def WHILE_STRUCTURE(self):
            return self.getToken(proyecto_finalParser.WHILE_STRUCTURE, 0)

        def LPAREN(self):
            return self.getToken(proyecto_finalParser.LPAREN, 0)

        def RPAREN(self):
            return self.getToken(proyecto_finalParser.RPAREN, 0)

        def getRuleIndex(self):
            return proyecto_finalParser.RULE_ciclo

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterCiclo" ):
                listener.enterCiclo(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitCiclo" ):
                listener.exitCiclo(self)




    def ciclo(self):

        localctx = proyecto_finalParser.CicloContext(self, self._ctx, self.state)
        self.enterRule(localctx, 8, self.RULE_ciclo)
        self._la = 0 # Token type
        try:
            self.state = 107
            self._errHandler.sync(self)
            token = self._input.LA(1)
            if token in [31]:
                self.enterOuterAlt(localctx, 1)
                self.state = 76
                self.match(proyecto_finalParser.FOR_STRUCTURE)
                self.state = 77
                _la = self._input.LA(1)
                if not((((_la) & ~0x3f) == 0 and ((1 << _la) & 503316480) != 0)):
                    self._errHandler.recoverInline(self)
                else:
                    self._errHandler.reportMatch(self)
                    self.consume()
                self.state = 78
                self.match(proyecto_finalParser.ID)
                self.state = 79
                self.match(proyecto_finalParser.RECTANGULO)
                self.state = 80
                self.expresion(0)
                self.state = 83
                self._errHandler.sync(self)
                _la = self._input.LA(1)
                if _la==9:
                    self.state = 81
                    self.match(proyecto_finalParser.UNTIL)
                    self.state = 82
                    self.expresion(0)


                self.state = 85
                self.match(proyecto_finalParser.LBRACE)
                self.state = 89
                self._errHandler.sync(self)
                _la = self._input.LA(1)
                while (((_la) & ~0x3f) == 0 and ((1 << _la) & 67612451202) != 0):
                    self.state = 86
                    self.sentenceDeclare()
                    self.state = 91
                    self._errHandler.sync(self)
                    _la = self._input.LA(1)

                self.state = 92
                self.match(proyecto_finalParser.RBRACE)
                pass
            elif token in [32]:
                self.enterOuterAlt(localctx, 2)
                self.state = 94
                self.match(proyecto_finalParser.WHILE_STRUCTURE)
                self.state = 95
                self.match(proyecto_finalParser.LPAREN)
                self.state = 96
                self.expresion(0)
                self.state = 97
                self.match(proyecto_finalParser.RPAREN)
                self.state = 98
                self.match(proyecto_finalParser.LBRACE)
                self.state = 102
                self._errHandler.sync(self)
                _la = self._input.LA(1)
                while (((_la) & ~0x3f) == 0 and ((1 << _la) & 67612451202) != 0):
                    self.state = 99
                    self.sentenceDeclare()
                    self.state = 104
                    self._errHandler.sync(self)
                    _la = self._input.LA(1)

                self.state = 105
                self.match(proyecto_finalParser.RBRACE)
                pass
            else:
                raise NoViableAltException(self)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class ImprimirStatementContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def PRINT(self):
            return self.getToken(proyecto_finalParser.PRINT, 0)

        def LPAREN(self):
            return self.getToken(proyecto_finalParser.LPAREN, 0)

        def expresion(self):
            return self.getTypedRuleContext(proyecto_finalParser.ExpresionContext,0)


        def RPAREN(self):
            return self.getToken(proyecto_finalParser.RPAREN, 0)

        def SEMI(self):
            return self.getToken(proyecto_finalParser.SEMI, 0)

        def getRuleIndex(self):
            return proyecto_finalParser.RULE_imprimirStatement

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterImprimirStatement" ):
                listener.enterImprimirStatement(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitImprimirStatement" ):
                listener.exitImprimirStatement(self)




    def imprimirStatement(self):

        localctx = proyecto_finalParser.ImprimirStatementContext(self, self._ctx, self.state)
        self.enterRule(localctx, 10, self.RULE_imprimirStatement)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 109
            self.match(proyecto_finalParser.PRINT)
            self.state = 110
            self.match(proyecto_finalParser.LPAREN)
            self.state = 111
            self.expresion(0)
            self.state = 112
            self.match(proyecto_finalParser.RPAREN)
            self.state = 113
            self.match(proyecto_finalParser.SEMI)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class ReturnStatementContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def RETURN(self):
            return self.getToken(proyecto_finalParser.RETURN, 0)

        def expresion(self):
            return self.getTypedRuleContext(proyecto_finalParser.ExpresionContext,0)


        def SEMI(self):
            return self.getToken(proyecto_finalParser.SEMI, 0)

        def getRuleIndex(self):
            return proyecto_finalParser.RULE_returnStatement

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterReturnStatement" ):
                listener.enterReturnStatement(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitReturnStatement" ):
                listener.exitReturnStatement(self)




    def returnStatement(self):

        localctx = proyecto_finalParser.ReturnStatementContext(self, self._ctx, self.state)
        self.enterRule(localctx, 12, self.RULE_returnStatement)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 115
            self.match(proyecto_finalParser.RETURN)
            self.state = 116
            self.expresion(0)
            self.state = 117
            self.match(proyecto_finalParser.SEMI)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class ExpresionStatementContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def expresion(self):
            return self.getTypedRuleContext(proyecto_finalParser.ExpresionContext,0)


        def SEMI(self):
            return self.getToken(proyecto_finalParser.SEMI, 0)

        def getRuleIndex(self):
            return proyecto_finalParser.RULE_expresionStatement

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterExpresionStatement" ):
                listener.enterExpresionStatement(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitExpresionStatement" ):
                listener.exitExpresionStatement(self)




    def expresionStatement(self):

        localctx = proyecto_finalParser.ExpresionStatementContext(self, self._ctx, self.state)
        self.enterRule(localctx, 14, self.RULE_expresionStatement)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 119
            self.expresion(0)
            self.state = 120
            self.match(proyecto_finalParser.SEMI)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class ListaParamContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def ID(self, i:int=None):
            if i is None:
                return self.getTokens(proyecto_finalParser.ID)
            else:
                return self.getToken(proyecto_finalParser.ID, i)

        def TEXT(self, i:int=None):
            if i is None:
                return self.getTokens(proyecto_finalParser.TEXT)
            else:
                return self.getToken(proyecto_finalParser.TEXT, i)

        def INTERGER(self, i:int=None):
            if i is None:
                return self.getTokens(proyecto_finalParser.INTERGER)
            else:
                return self.getToken(proyecto_finalParser.INTERGER, i)

        def DECIMAL(self, i:int=None):
            if i is None:
                return self.getTokens(proyecto_finalParser.DECIMAL)
            else:
                return self.getToken(proyecto_finalParser.DECIMAL, i)

        def BOOLEAN(self, i:int=None):
            if i is None:
                return self.getTokens(proyecto_finalParser.BOOLEAN)
            else:
                return self.getToken(proyecto_finalParser.BOOLEAN, i)

        def COMMA(self, i:int=None):
            if i is None:
                return self.getTokens(proyecto_finalParser.COMMA)
            else:
                return self.getToken(proyecto_finalParser.COMMA, i)

        def getRuleIndex(self):
            return proyecto_finalParser.RULE_listaParam

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterListaParam" ):
                listener.enterListaParam(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitListaParam" ):
                listener.exitListaParam(self)




    def listaParam(self):

        localctx = proyecto_finalParser.ListaParamContext(self, self._ctx, self.state)
        self.enterRule(localctx, 16, self.RULE_listaParam)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 122
            _la = self._input.LA(1)
            if not((((_la) & ~0x3f) == 0 and ((1 << _la) & 503316480) != 0)):
                self._errHandler.recoverInline(self)
            else:
                self._errHandler.reportMatch(self)
                self.consume()
            self.state = 123
            self.match(proyecto_finalParser.ID)
            self.state = 129
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while _la==6:
                self.state = 124
                self.match(proyecto_finalParser.COMMA)
                self.state = 125
                _la = self._input.LA(1)
                if not((((_la) & ~0x3f) == 0 and ((1 << _la) & 503316480) != 0)):
                    self._errHandler.recoverInline(self)
                else:
                    self._errHandler.reportMatch(self)
                    self.consume()
                self.state = 126
                self.match(proyecto_finalParser.ID)
                self.state = 131
                self._errHandler.sync(self)
                _la = self._input.LA(1)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class ExpresionContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def RAIZ(self):
            return self.getToken(proyecto_finalParser.RAIZ, 0)

        def LPAREN(self):
            return self.getToken(proyecto_finalParser.LPAREN, 0)

        def expresion(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(proyecto_finalParser.ExpresionContext)
            else:
                return self.getTypedRuleContext(proyecto_finalParser.ExpresionContext,i)


        def RPAREN(self):
            return self.getToken(proyecto_finalParser.RPAREN, 0)

        def STRING(self):
            return self.getToken(proyecto_finalParser.STRING, 0)

        def NUMBER(self):
            return self.getToken(proyecto_finalParser.NUMBER, 0)

        def ID(self):
            return self.getToken(proyecto_finalParser.ID, 0)

        def funcionLlamada(self):
            return self.getTypedRuleContext(proyecto_finalParser.FuncionLlamadaContext,0)


        def PLUS(self):
            return self.getToken(proyecto_finalParser.PLUS, 0)

        def MINUS(self):
            return self.getToken(proyecto_finalParser.MINUS, 0)

        def MUL(self):
            return self.getToken(proyecto_finalParser.MUL, 0)

        def DIV(self):
            return self.getToken(proyecto_finalParser.DIV, 0)

        def MAYOR(self):
            return self.getToken(proyecto_finalParser.MAYOR, 0)

        def MENOR(self):
            return self.getToken(proyecto_finalParser.MENOR, 0)

        def MAYOR_EQUAL(self):
            return self.getToken(proyecto_finalParser.MAYOR_EQUAL, 0)

        def MENOR_EQUAL(self):
            return self.getToken(proyecto_finalParser.MENOR_EQUAL, 0)

        def NO_EQUAL(self):
            return self.getToken(proyecto_finalParser.NO_EQUAL, 0)

        def EQUAL(self):
            return self.getToken(proyecto_finalParser.EQUAL, 0)

        def getRuleIndex(self):
            return proyecto_finalParser.RULE_expresion

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterExpresion" ):
                listener.enterExpresion(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitExpresion" ):
                listener.exitExpresion(self)



    def expresion(self, _p:int=0):
        _parentctx = self._ctx
        _parentState = self.state
        localctx = proyecto_finalParser.ExpresionContext(self, self._ctx, _parentState)
        _prevctx = localctx
        _startState = 18
        self.enterRecursionRule(localctx, 18, self.RULE_expresion, _p)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 146
            self._errHandler.sync(self)
            la_ = self._interp.adaptivePredict(self._input,11,self._ctx)
            if la_ == 1:
                self.state = 133
                self.match(proyecto_finalParser.RAIZ)
                self.state = 134
                self.match(proyecto_finalParser.LPAREN)
                self.state = 135
                self.expresion(0)
                self.state = 136
                self.match(proyecto_finalParser.RPAREN)
                pass

            elif la_ == 2:
                self.state = 138
                self.match(proyecto_finalParser.LPAREN)
                self.state = 139
                self.expresion(0)
                self.state = 140
                self.match(proyecto_finalParser.RPAREN)
                pass

            elif la_ == 3:
                self.state = 142
                self.match(proyecto_finalParser.STRING)
                pass

            elif la_ == 4:
                self.state = 143
                self.match(proyecto_finalParser.NUMBER)
                pass

            elif la_ == 5:
                self.state = 144
